# pytorch-glog-fork

./: .clang-tidy  .gitignore  .gitmodules  .lintrunner.toml  .pytorch-test-times.json  41255.diff  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  Dockerfile.mpt30b  README.md  ROCm_Installation_Guide.md_v3.7  ROCm_Installation_Guide_v3.7  ROCm_Installation_Guide_v3.7.md  build_variables.bzl  ft.patch  install.sh  related_commits  requirements.txt  setup.py
.additional_ci_files/: td_heuristic_historical_edited_files.json  td_heuristic_profiling.json  test-class-times.json  test-times.json
.automation_scripts/: parse_xml_results.py  run_pytorch_unit_tests.py
.ci/docker/: aotriton_version.txt  build.sh  requirements-ci.txt
.ci/pytorch/: XNNPACK.patch  build-rocm-asan.sh  build.sh  common.sh  common_utils.sh  env-rocm-asan.sh  fbgemm.patch  rocm_extras.sh  test.sh
.circleci/: config.yml
.circleci/docker/: build.sh  requirements-ci.txt
.circleci/scripts/: binary_populate_env.sh
.github/: actionlint.yaml
.github/ci_commit_pins/: fbgemm.txt
.github/scripts/: build_triton_wheel.py
.github/workflows/: _linux-build.yml  _rocm-test.yml  build-triton-wheel.yml  docker-cache-mi300.yml  lint.yml  pull.yml  rocm.yml  slow.yml  trunk.yml  (+1 more)
.glog/: glog-scan.sarif
Installation/: ROCm_Installation_Guide_v3.7.md
aten/: CMakeLists.txt
automation_script/: ut_results_parse_automation.py
binaries/: CMakeLists.txt
c10/cuda/test/: CMakeLists.txt
caffe2/: CMakeLists.txt
caffe2/core/nomnigraph/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
rocm-docs/: caffe2-build.md
test/: batchnorm_nhwc_enable_miopen_in_runtime.py  common_distributed.py  common_nn.py  common_utils.py  requirements.txt  run_test.py  test_autograd.py  test_binary_ufuncs.py  test_c10d.py  test_cpp_extensions_jit.py  test_cuda.py  test_eigen.cpp  test_eigen_log.cpp  test_foreach.py  test_fx.py  test_fx_backends.py  test_hang.py  test_indexing.py  test_jit.py  test_jit_cuda_fuser.py  test_jit_fuser.py  test_jit_fuser_te.py  test_linalg.py  test_matmul_cuda.py  test_meta.py  test_modules.py  test_multiprocessing.py  test_nn.py  test_ops.py  test_ops_gradients.py  test_ops_jit.py  test_optim.py  test_profiler.py  test_reductions.py  test_sparse.py  test_sparse_csr.py  test_spectral_ops.py  test_tensor_creation_ops.py  test_tensorboard.py  test_testing.py  (+4 more)
tools/: build_pytorch_libs.py
torch/: CMakeLists.txt  _meta_registrations.py  functional.py  overrides.py  storage.py  torch_version.py
torch/utils/tracelens/examples/custom_workflows/roofline_analyzer/: .gitignore  README.md  main.py  mi300x_bfloat16.toml  pyproject.toml
torch/utils/tracelens/examples/custom_workflows/roofline_analyzer/src/: cli.py  roofline.py  xlsx.py
torchgen/: gen.py
(+2331 files in other folders)
